<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">editNote</string>
    <string name="app_name_settings">Setting</string>
    <string name="Open">Open</string>
    <string name="New">New</string>
    <string name="Save">Save</string>
    <string name="Save_As">Save As</string>
    <string name="Location">Location: %s</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="Select">Select</string>
    <string name="File_Name">File Name:</string>
    <string name="Cancel">Cancel</string>
    <string name="Create">Save</string>
    <string name="No_Data">No Data</string>
	<string name="File_not_saved">File not saved:</string>
	<string name="Save_current_file">Save current file?</string>
	<string name="Yes">Yes</string>
	<string name="No">No</string>
	<string name="OK">OK</string>
	<string name="File_Written">File Written</string>
	<string name="Can_not_write_file">Can not write file</string>
	<string name="File_opened_">File opened </string>
	<string name="File_not_found">File not found</string>
	<string name="Can_not_read_file">Can not read file</string>
	<string name="Operation_Canceled">Operation Canceled</string>
	<string name="Settings">Settings</string>
	<string name="About">About</string>
	<string name="Continue">Continue</string>
	<string name="about_message">This is a Editor App for Android OS. To get this app source code visit https://github.com/ayushgarg0101/editNOTE OR https://www.revelayush.weebly.com</string>
    <string name="Choose_Language">Choose Language</string>
	<string name="Language">Language</string>
    <string name="Click_to_change_language">сlick to change language of interface</string>
    <string name="searchLabel">Search</string>
	<string name="searchHint">Text</string>
	<string name="s_not_found">"%s" not found</string>
	<string name="opened_last_edited_file">opened last edited file %s</string>
	<string name="Search">Search</string>
	<string name="Choose_a_color">Choose a color</string>
	<string name="Open_File">Open File</string>
	<string name="Save_File">Save File</string>
	<!--<string name="Small">Small</string>
    <string name="Medium">Medium</string>
    <string name="Large">Large</string>
    <string name="Huge">Huge</string>-->
	<string name="Click_to_change_encoding">Click to change encoding</string>
	<string name="Encoding">Encoding</string>
	<string name="Line_endings">Line endings</string>
	<string name="Line_Delimiters">Line Delimiters</string>
	<string name="Font_Size">Font Size</string>
	<string name="Choose_a_font_size">Choose a font size</string>
	<string name="Font_Color">Font Color</string>
	<string name="Choose_a_font_color">Choose a font color</string>
	<string name="Background_Color">Background Color</string>
	<string name="Choose_a_background_color">Choose a background color</string>
	<string name="Version">Version</string>
	<string name="Just_a_little_FYI">editNote developed by Kuldeep and Chinmay</string>
	<string name="About_Editor">About </string>
	<string name="Warranty_Information">Warranty Information</string>
	<string name="Font">Font</string>
	<string name="Choose_a_font_type">Choose a font type</string>
	<string name="Open_Last">Open Last</string>
	<string name="To_open_last_edited_file">To open last edited file</string>
	<string name="Main_Settings">Main Settings</string>
	<string name="Appearance">Appearance</string>
	<string name="You_have_made_some_changes">You have made some changes.</string>
	<string name="Are_you_sure_to_quit">Are you sure you want to quit the application?</string>
	<string name="File_already_exists">File already exists</string>
	<string name="Existing_file_will_be_overwritten">Existing file will be overwritten, are you sure to proceed?</string>
	<string name="Exit">Exit</string>
</resources>
